# RRS-generate-topology-test

./: .gitignore  CMakeLists.txt
data/: 1track.gltf  1track1+2.gltf  1track2+1.gltf  2track.gltf
include/: trajectory_struct.h
src/: main.cpp  tinyxml2.cpp
